[package]
name = "goesdown"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", default-features = false, features = ["std", "clock"] }
chrono-tz = "0.10.0"
clap = { version = "4.5.21", features = ["derive"] }
reqwest = { version = "0.12.9", features = ["deflate", "zstd", "gzip", "cookies", "multipart"] }
tokio = { version = "1", features = ["full"] }
url = "2.5.4"
